@@ -39,7 +39,7 @@ VERSION1: {
       bar => 'frew',
     })
   } 'schema not deployed';
-  $handler->install;
+  $handler->install({ version => '1.0' });
   dies_ok {
     $handler->install;
   } 'cannot install twice';
